--- a/apps/agent-langgraph/pyproject.toml
+++ b/apps/agent-langgraph/pyproject.toml
@@ -8,14 +8,15 @@ build-backend = "hatchling.build"
 [project]
 name = "prynai-agent"
 version = "0.0.1"
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 dependencies = [
-  "langgraph>=0.6.0",
-  "langgraph-sdk>=0.1.66",
-  "langchain-core>=0.2.38",
-  "langsmith>=0.1.63",
-  "httpx>=0.25.0"
+  "langgraph>=0.6.0,<0.7",
+  "langgraph-sdk>=0.2.9,<0.3",
+  "langchain-core>=0.3.76,<0.4",
+  "langchain-openai>=0.3.30,<0.4",
+  "langsmith>=0.4.30,<0.5",
+  "httpx>=0.27,<1"
 ]
 
 [tool.hatch.build.targets.wheel]
-packages = ["my_agent"]
+packages = ["my_agent"] 
