--- a/.github/workflows/build_deploy_chainlit.yml
+++ b/.github/workflows/build_deploy_chainlit.yml
@@ -1,25 +1,57 @@
-name: chainlit-build-deploy
+name: build-and-deploy-chainlit
 on:
   push:
     branches: [ main ]
-    paths: [ "apps/chainlit-ui/**", ".github/workflows/build_deploy_chainlit.yml" ]
+    paths:
+      - "apps/chainlit-ui/**"
+      - ".github/workflows/build_deploy_chainlit.yml"
+
+concurrency:
+  group: deploy-chainlit
+  cancel-in-progress: false
+
 jobs:
-  build-deploy:
-    permissions: { id-token: write, contents: read }
+  deploy:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
+    env:
+      RG: ${{ vars.AZ_RG }}
+      ACR_NAME: ${{ vars.ACR_NAME }}
+      REGISTRY: ${{ vars.ACR_NAME }}.azurecr.io
+      APP: ${{ vars.CHAINLIT_APP_NAME }}       # MUST equal your ACA resource name (ca-chainlit)
+      IMAGE_REPO: prynai/chainlit
+      IMAGE_TAG: ${{ github.sha }}
+      IMAGE: ${{ vars.ACR_NAME }}.azurecr.io/prynai/chainlit:${{ github.sha }}
+
     steps:
       - uses: actions/checkout@v4
-      - uses: azure/login@v2
+
+      - name: Azure login (OIDC)
+        uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          tenant-id:  ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-      - uses: azure/container-apps-deploy-action@v2
+# OIDC workflow reference 
+# https: learn.microsoft.com/azure/developer/github/connect-from-azure-openid-connect
+
+      - name: Build image in ACR (server-side)
+        uses: azure/cli@v2
         with:
-          resourceGroup: ${{ vars.AZ_RG }}
-          containerAppName: ${{ vars.CHAINLIT_APP_NAME }}
-          acrName: ${{ vars.ACR_NAME }}
-          imageToBuild: ${{ vars.ACR_NAME }}.azurecr.io/prynai/chainlit:${{ github.sha }}
-          dockerfilePath: apps/chainlit-ui/Dockerfile
-          targetPort: 8000
-          ingress: external
+          azcliversion: latest
+          inlineScript: |
+            az acr build -r $ACR_NAME -t $IMAGE apps/chainlit-ui
+# ACR Tasks docs 
+# https: learn.microsoft.com/azure/container-registry/container-registry-tutorial-quick-task
+
+      - name: Roll the Container App to the new image
+        uses: azure/cli@v2
+        with:
+          azcliversion: latest
+          inlineScript: |
+            az config set extension.use_dynamic_install=yes_without_prompt
+            az containerapp update -g $RG -n $APP --image $IMAGE
+# Update Container App 
+# https: learn.microsoft.com/azure/container-apps/github-actions
