--- a/.github/workflows/build_deploy_chainlit.yml
+++ b/.github/workflows/build_deploy_chainlit.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Azure login (OIDC)
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          client-id: ${{ secrets.AZURE_FEDERATED_CLIENT_ID }}
           tenant-id:  ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 # OIDC workflow reference 
