--- a/apps/gateway-fastapi/pyproject.toml
+++ b/apps/gateway-fastapi/pyproject.toml
@@ -5,12 +5,17 @@ build-backend = "hatchling.build"
 [project]
 name = "prynai-gateway"
 version = "0.0.1"
-requires-python = ">=3.10"
+requires-python = ">=3.11"
 dependencies = [
-  "fastapi>=0.115",
-  "uvicorn>=0.29",
-  "httpx>=0.25.0",
-  "sse-starlette>=2.1.0,<2.2.0"
+  "fastapi>=0.115,<0.119",
+  "uvicorn>=0.35,<0.38",
+  "httpx>=0.27,<1",
+  "sse-starlette>=3,<4",
+  "python-multipart==0.0.20",
+  "python-jose[cryptography]>=3.3,<4",
+  "cryptography>=46,<47",
+  "langgraph>=0.6,<0.7",
+  "langgraph-sdk>=0.2.9,<0.3"
 ]
 
 [tool.hatch.build.targets.wheel]
