--- a/apps/chainlit-ui/pyproject.toml
+++ b/apps/chainlit-ui/pyproject.toml
@@ -1,3 +1,4 @@
+# apps/chainlit-ui/pyproject.toml
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
@@ -8,6 +9,8 @@ version = "0.0.1"
 requires-python = ">=3.10"
 dependencies = [
   "chainlit>=2.0.0",
+  "fastapi>=0.115,<0.119",
+  "uvicorn>=0.35,<0.38",
   "httpx>=0.25.0"
 ]
 
