--- a/apps/chainlit-ui/pyproject.toml
+++ b/apps/chainlit-ui/pyproject.toml
@@ -16,3 +16,7 @@ dependencies = [
 
 [tool.hatch.build.targets.wheel]
 packages = ["src"]
+
+# ensure the auth assets are included in the wheel
+[tool.hatch.build.targets.wheel.force-include]
+"src/auth" = "src/auth"
