--- a/apps/chainlit-ui/pyproject.toml
+++ b/apps/chainlit-ui/pyproject.toml
@@ -20,3 +20,4 @@ packages = ["src"]
 # ensure the auth assets are included in the wheel
 [tool.hatch.build.targets.wheel.force-include]
 "src/auth" = "src/auth"
+"src/public" = "src/public"
