--- a/apps/agent-langgraph/pyproject.toml
+++ b/apps/agent-langgraph/pyproject.toml
@@ -12,6 +12,7 @@ requires-python = ">=3.11"
 dependencies = [
   "langgraph>=0.6.0,<0.7",
   "langgraph-sdk>=0.2.9,<0.3",
+  "langchain>=0.3.8",                 # NEW: for init_embeddings "openai:..." string
   "langchain-core>=0.3.76,<0.4",
   "langchain-openai>=0.3.30,<0.4",
   "langsmith>=0.4.30,<0.5",
@@ -19,4 +20,4 @@ dependencies = [
 ]
 
 [tool.hatch.build.targets.wheel]
-packages = ["my_agent"] 
+packages = ["my_agent"]
